--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,6 @@
-<h1>Public::Homes#about</h1>
-<p>Find me in app/views/public/homes/about.html.erb</p>
+<h1>ごちそう</h1>
+<p>このサイトは</br>
+  「人生で一番美味しい」と思った一品を</br>
+  料理名ごとに記録・共有する</br>
+  ごちそう集約サイトです。
+</p>
