--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,16 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10 mx-auto">
+      <div style="background-color :#234f4f; height: 250px;">
+        <h1 class="text-center text-white py-3">人生のおいしいを共有しよう</h1>
+        <p class="text-center py-1 text-white">
+          このサイトは
+          <strong>「人生で一番美味しい」</strong>と思った一品を</br>
+          料理名ごとに記録・共有するごちそう集約サイトです
+        </p>
+      </div>
+      <p class="mt-5">新規投稿</p>
+    </div>
+  </div>
+</div>
+
