--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Public::Posts#index</h1>
-<p>Find me in app/views/public/posts/index.html.erb</p>
+<h3>投稿一覧</h3>
+<% @posts.each do |post| %>
+  <%= post.dish %>
+  <%= post.impression %>
+<% end %>
