--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Public::Posts#new</h1>
-<p>Find me in app/views/public/posts/new.html.erb</p>
+<h3>新規投稿</h3>
+<%= form_with model: @post, local:true do |f| %>
+  <div>
+    <%= f.label :dish, "料理名" %></br>
+    <%= f.text_field :dish %>
+  </div>
+  <div>
+    <%= f.label :impression, "感想・一言コメント" %></br>
+    <%= f.text_area :impression %>
+  </div>
+  <div>
+    <%= f.submit class: 'btn btn-light' %>
+  </div>
+<% end %>
