--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -1,2 +1,20 @@
-<h1>Public::Users#mypage</h1>
-<p>Find me in app/views/public/users/mypage.html.erb</p>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-10">
+      <div class="d-flex align-items-end">
+        <span class="mr-2 mb-1">name: </span>
+        <h1><%= @user.name %></h1>
+      </div>
+      <div class="d-flex align-items-end">
+        <span class="mr-2">introduction: </span>
+        <div><%= @user.introduction %></div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--全て数表示-->
+<!--投稿-->
+<!--フォロワー(link)-->
+<!--フォロー(link)-->
+<!--食べたい(link)-->
