--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Public::Posts#edit</h1>
-<p>Find me in app/views/public/posts/edit.html.erb</p>
+<div class="container mt-3">
+  <div class="row">
+    <div>
+      <h3>投稿編集</h3>
+      <%= render 'form', post: @post %>
+    </div>
+  </div>
+</div>
