--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,5 +1,26 @@
-<h3>投稿一覧</h3>
-<% @posts.each do |post| %>
-  <%= post.dish %>
-  <%= post.impression %>
-<% end %>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-12">
+      <h3 class="text-center">みんなが選ぶ一品</h3>
+      <div class="d-flex mt-3">
+        <% @posts.each do |post| %>
+          <div class="mr-3">
+            <% if post.image.attached? %>
+              <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
+            <% else %>
+              <%= link_to (image_tag 'no_image', size: "160x120"), post_path(post) %>
+            <% end %></br>
+            <%= link_to post.dish, post_path(post) %></br>
+
+            <% if post.user.image.attached? %>
+              <%= link_to (image_tag post.user.image, size: "30x30"), user_path(post.user_id) %>
+            <% else %>
+              <%= link_to (image_tag 'no_image', size: "30x30"), user_path(post.user_id) %>
+            <% end %>
+            <%= link_to post.user.name, user_path(post.user_id) %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
