--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,2 +1,42 @@
-<h1>Public::Users#edit</h1>
-<p>Find me in app/views/public/users/edit.html.erb</p>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-1">
+      <% if @user.image.attached? %>
+        <%= image_tag @user.image, size: "100x100" %>
+      <% else %>
+        <%= image_tag 'user_no_image', size: "80x80" %>
+      <% end %>
+    </div>
+    <div class="col-7 ml-3">
+      <div class="d-flex align-items-end">
+        <span class="mr-2 mb-1">name: </span>
+        <h1><%= @user.name %></h1>
+      </div>
+      <div class="d-flex align-items-end">
+        <span class="mr-2">introduction: </span>
+        <div><%= @user.introduction %></div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-8 mt-3">
+      <%= form_with model: @user, local:true do |f| %>
+        <%= render 'layouts/error_messages', resource: @user %>
+        <div>
+          <%= f.label :name, "ユーザーネーム" %></br>
+          <%= f.text_field :name, style: "width:50%" %>
+        </div>
+        <div class="mt-2">
+          <%= f.label :introduction, "食べた感想" %></br>
+          <%= f.text_area :introduction, style: "width:100%" %>
+        </div>
+        <div class="mt-2">
+          <%= f.label :image, "アイコン画像" %></br>
+          <%= f.file_field :image, accept: "image/*" %>
+          <%= f.submit class: 'btn btn-light mt-2' %>
+        </div>
+        
+      <% end %>
+    </div>
+  </div>
+</div>
