--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -1,6 +1,13 @@
 <div class="container mt-3">
   <div class="row">
-    <div class="col-10">
+    <div>
+      <% if @user.image.attached? %>
+        <%= image_tag @user.image, size: "100x100" %>
+      <% else %>
+        <%= image_tag 'user_no_image', size: "80x80" %>
+      <% end %>
+    </div>
+    <div class="ml-3">
       <div class="d-flex align-items-end">
         <span class="mr-2 mb-1">name: </span>
         <h1><%= @user.name %></h1>
@@ -8,6 +15,27 @@
       <div class="d-flex align-items-end">
         <span class="mr-2">introduction: </span>
         <div><%= @user.introduction %></div>
+        <div class="ml-3">
+          <%= link_to "編集する", edit_user_path(@user), class: "btn btn-light btn-sm" %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div>
+      <h5 class="ml-3">投稿一覧</h5>
+      <div class ="d-flex flex-wrap">
+        <% @posts.each do |post| %>
+          <div class="mr-3">
+            <% if post.image.attached? %>
+              <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
+            <% else %>
+              <%= link_to (image_tag 'no_image', size: "160x120"), post_path(post) %>
+            <% end %>
+            <br><%= link_to post.dish, post_path(post) %>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
