--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,6 +1,10 @@
-<h1>ごちそう</h1>
-<p>このサイトは</br>
-  「人生で一番美味しい」と思った一品を</br>
-  料理名ごとに記録・共有する</br>
-  ごちそう集約サイトです。
-</p>
+<div style="height: 500px;">
+  <h2 class="text-center pt-5">
+    あなたが<strong>「人生で一番美味しい」</strong>と感じた一品を</br>
+    記録し共有することで、
+  </h2>
+  <h2 class="text-center">
+    あらゆる人の「美味しい」が料理名ごとに集まる</br>
+    ごちそう集約サイトです。
+  </h2>
+</div>
