--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -11,6 +11,7 @@
             <li class="nav-item"><%= link_to 'ジャンル一覧',  admin_genres_path, class: 'nav-link text-white' %></li>
             <li class="nav-item"><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete, class: 'nav-link text-white' %></li>
           <% elsif user_signed_in? %>
+            <li class="nav-item"><%= link_to 'サイトについて', about_path, class: 'nav-link text-white' %></li>
             <li class="nav-item"><%= link_to 'マイページ', mypage_path, class: 'nav-link text-white' %></li>
             <li class="nav-item"><%= link_to '新規投稿', new_post_path, class: 'nav-link text-white' %></li>
             <li class="nav-item"><%= link_to '投稿一覧', posts_path, class: 'nav-link text-white' %></li>
