--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-12">
       <h3 class="text-center">みんなが選ぶ一品</h3>
-      <div class="d-flex mt-3">
+      <div class="d-flex flex-wrap mt-3">
         <% @posts.each do |post| %>
-          <div class="mr-3">
+          <div class="mr-3 mt-3">
             <% if post.image.attached? %>
               <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
             <% else %>
@@ -15,7 +15,7 @@
             <% if post.user.image.attached? %>
               <%= link_to (image_tag post.user.image, size: "30x30"), user_path(post.user_id) %>
             <% else %>
-              <%= link_to (image_tag 'no_image', size: "30x30"), user_path(post.user_id) %>
+              <%= link_to (image_tag 'user_no_image', size: "30x30"), user_path(post.user_id) %>
             <% end %>
             <%= link_to post.user.name, user_path(post.user_id) %>
           </div>
