--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -35,6 +35,7 @@
       <div class="mt-3 ml-1">
         <% if @post.user == current_user %>
           <%= link_to "編集する", edit_post_path(@post), class: "btn btn-light" %>
+          <%= link_to '削除する', @post, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-danger ml-2" %>
         <% end %>
       </div>
     </div>
