--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
-<div style="height: 60px; background-color: #842042;">
+<div class="mt-3", style="height: 60px; background-color: #842042;">
   
 </div>
