--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -3,7 +3,7 @@
     あなたが<strong>「人生で一番美味しい」</strong>と感じた一品を</br>
     記録し共有することで、
   </h2>
-  <h2 class="text-center">
+  <h2 class="text-center pt-3">
     あらゆる人の「美味しい」が料理名ごとに集まる</br>
     ごちそう集約サイトです。
   </h2>
