--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -5,19 +5,28 @@
       <div class="d-flex flex-wrap mt-3">
         <% @posts.each do |post| %>
           <div class="mr-3 mt-3">
-            <% if post.image.attached? %>
-              <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
+            <% if post.user.is_active == true %>
+              <% if post.image.attached? %>
+                <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
+              <% else %>
+                <%= link_to (image_tag 'no_image', size: "160x120"), post_path(post) %>
+              <% end %></br>
+              <%= link_to post.dish, post_path(post) %></br>
+  
+              <% if post.user.image.attached? %>
+                <%= link_to (image_tag post.user.image, size: "30x30"), user_path(post.user_id) %>
+              <% else %>
+                <%= link_to (image_tag 'user_no_image', size: "30x30"), user_path(post.user_id) %>
+              <% end %>
+              <%= link_to post.user.name, user_path(post.user_id) %>
             <% else %>
-              <%= link_to (image_tag 'no_image', size: "160x120"), post_path(post) %>
-            <% end %></br>
-            <%= link_to post.dish, post_path(post) %></br>
-
-            <% if post.user.image.attached? %>
-              <%= link_to (image_tag post.user.image, size: "30x30"), user_path(post.user_id) %>
-            <% else %>
-              <%= link_to (image_tag 'user_no_image', size: "30x30"), user_path(post.user_id) %>
+              <% if post.image.attached? %>
+                <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
+              <% else %>
+                <%= link_to (image_tag 'no_image', size: "160x120"), post_path(post) %>
+              <% end %></br>
+              <%= link_to post.dish, post_path(post) %></br>
             <% end %>
-            <%= link_to post.user.name, user_path(post.user_id) %>
           </div>
         <% end %>
       </div>
