--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -10,22 +10,26 @@
       </div>
       <div>
         <h3><%= @post.dish %></h3>
-        <p><%= @post.impression %></p>
-      </div>
-    </div>
-  </div>
-  <div class="row mt-3">
-    <div class="d-flex align-items-end">
-      <div>
-        <% if @post.user.image.attached? %>
-          <%= link_to (image_tag @post.user.image, size: "50x50"), user_path(@post.user_id) %>
-        <% else %>
-          <%= link_to (image_tag 'no_image', size: "50x50"), user_path(@post.user_id) %>
+        <% if @post.user.is_active == true %>
+          <p><%= @post.impression %></p>
         <% end %>
       </div>
-      <p class="ml-3"><%= link_to @post.user.name, user_path(@post.user_id) %></p>
     </div>
   </div>
+  <% if @post.user.is_active == true %>
+    <div class="row mt-3">
+      <div class="d-flex align-items-end">
+        <div>
+          <% if @post.user.image.attached? %>
+            <%= link_to (image_tag @post.user.image, size: "50x50"), user_path(@post.user_id) %>
+          <% else %>
+            <%= link_to (image_tag 'no_image', size: "50x50"), user_path(@post.user_id) %>
+          <% end %>
+        </div>
+        <p class="ml-3"><%= link_to @post.user.name, user_path(@post.user_id) %></p>
+      </div>
+    </div>
+  <% end %>
   <div class="row mt-3">
     <div>
       <h5 class="ml-3">店舗情報</h5>
