--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,10 +1,10 @@
-<div style="height: 500px;">
-  <h2 class="text-center pt-5">
-    あなたが<strong>「人生で一番美味しい」</strong>と感じた一品を</br>
-    記録し共有することで、
-  </h2>
-  <h2 class="text-center pt-3">
-    あらゆる人の「美味しい」が料理名ごとに集まる</br>
-    ごちそう集約サイトです。
-  </h2>
+<div class="position-relative mt-3" style="background-image: url('/assets/table.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 500px;">
+  <div style="position: absolute; top: 63%; left: 30%; transform: translate(-50%, -50%)">
+    <h2>
+      あなたが<span class="text-warning">「人生で一番美味しい」</span>と感じた一品を</br>
+      記録し共有することで、</br>
+      あらゆる人の「美味しい」が料理名ごとに集まる</br>
+      ごちそう集約サイトです。
+    </h2>
+  </div>
 </div>
