--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -15,10 +15,12 @@
       <div class="d-flex align-items-end">
         <span class="mr-2">introduction: </span>
         <div><%= @user.introduction %></div>
-        <div class="ml-3">
-          <%= link_to "編集する", edit_user_path(@user), class: "btn btn-light btn-sm" %>
-          <%= link_to '退会する', @user, method: :delete, data: { confirm: "退会すると全ての情報が削除されます。\n 本当に退会しますか？" }, class: "btn btn-sm btn-secondary ml-2" %>
-        </div>
+        <% unless @user.guest_user? %>
+          <div class="ml-3">
+            <%= link_to "編集する", edit_user_path(@user), class: "btn btn-light btn-sm" %>
+            <%= link_to '退会する', @user, method: :delete, data: { confirm: "退会すると全ての情報が削除されます。\n 本当に退会しますか？" }, class: "btn btn-sm btn-danger ml-2" %>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
@@ -39,6 +41,9 @@
         <% end %>
       </div>
     </div>
+  </div>
+  <div class="row justify-content-center">
+    <div><%= paginate @posts %></div>
   </div>
 </div>
 
