--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -18,12 +18,12 @@
     <div class="d-flex align-items-end">
       <div>
         <% if @post.user.image.attached? %>
-          <%= link_to (image_tag @post.user.image, size: "50x50"), user_path(@post.user_id) %>
+          <%= link_to (image_tag @post.user.image, size: "50x50"), admin_user_path(@post.user_id) %>
         <% else %>
-          <%= link_to (image_tag 'no_image', size: "50x50"), user_path(@post.user_id) %>
+          <%= link_to (image_tag 'no_image', size: "50x50"), admin_user_path(@post.user_id) %>
         <% end %>
       </div>
-      <p class="ml-3"><%= link_to @post.user.name, user_path(@post.user_id) %></p>
+      <p class="ml-3"><%= link_to @post.user.name, admin_user_path(@post.user_id) %></p>
     </div>
   </div>
   <div class="row mt-3">
