--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -20,10 +20,12 @@
             <li class="nav-item"><%= link_to 'サイトについて', about_path, class: 'nav-link text-white' %></li>
             <li class="nav-item"><%= link_to '新規登録', new_user_registration_path, class: 'nav-link text-white' %></li>
             <li class="nav-item"><%= link_to 'ログイン', new_user_session_path, class: 'nav-link text-white' %></li>
+            <li class="nav-item"><%= link_to "ゲストログイン", users_guest_sign_in_path, method: :post, class: "nav-link text-white" %></li>
+        </div>
           <% end %>
         </ul>
         <div>
-          search box
+          <!--search box-->
         </div>
       </div>
     </div>
