--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,15 +1,15 @@
 <div class="container">
   <div class="row">
-    <div class="col-10 mx-auto">
-      <div style="background-color :#234f4f;">
-        <h1 class="text-center text-white py-3">人生のおいしいを共有しよう</h1>
+    <div class="col-12 mx-auto">
+      <div class="position-relative" style="background-image: url('/assets/meal_time_change.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 150px;">
+        <h1 class="text-center text-white pt-5">人生のおいしいを共有しよう</h1>
 
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-12">
-      <h5 class="mt-3">新規投稿</h5>
+      <h5 class="mt-1">新規投稿</h5>
       <div class="d-flex flex-wrap">
         <% @posts.each do |post| %>
           <div class="col-2 pr-3 mb-3">
@@ -29,4 +29,3 @@
     <p class="ml-auto text-secondary">＊投稿閲覧にはログインが必要です</p>
   </div>
 </div>
-
