--- a/app/views/public/posts/_form.html.erb
+++ b/app/views/public/posts/_form.html.erb
@@ -32,7 +32,7 @@
       <%= f.label :address, "住所" %></br>
       <%= f.text_field :address, style: "width:100%" %>
     </div>
-    <div>
+    <div class="mb-3">
       <%= f.submit class: 'btn btn-light mt-3' %>
     </div>
   <% end %>
