--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container mt-3 mb-5">
   <div class="row">
     <div class="col-12">
       <h3 class="text-center">みんなが選ぶ一品</h3>
@@ -12,7 +12,7 @@
                 <%= link_to (image_tag 'no_image', size: "160x120"), post_path(post) %>
               <% end %></br>
               <%= link_to post.dish, post_path(post) %></br>
-  
+
               <% if post.user.image.attached? %>
                 <%= link_to (image_tag post.user.image, size: "30x30"), user_path(post.user_id) %>
               <% else %>
@@ -31,5 +31,8 @@
         <% end %>
       </div>
     </div>
+  </div>
+  <div class="row justify-content-center">
+    <div><%= paginate @posts %></div>
   </div>
 </div>
