--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -28,14 +28,13 @@
         </div>
         <div class="mt-2">
           <%= f.label :introduction, "食べた感想" %></br>
-          <%= f.text_area :introduction, style: "width:100%" %>
+          <%= f.text_area :introduction, style: "width:100%", placeholder: '好きな食べ物：　　味の好み：' %>
         </div>
         <div class="mt-2">
           <%= f.label :image, "アイコン画像" %></br>
           <%= f.file_field :image, accept: "image/*" %>
-          <%= f.submit class: 'btn btn-light mt-2' %>
+          <%= f.submit class: 'btn btn-light mt-2 mb-3' %>
         </div>
-        
       <% end %>
     </div>
   </div>
