--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -36,4 +36,7 @@
       </div>
     </div>
   </div>
+  <div class="row justify-content-center">
+    <div><%= paginate @posts %></div>
+  </div>
 </div>
