--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
-<div class="mt-3", style="height: 60px; background-color: #842042;">
-  
+<div class="mt-3 text-center", style="height: 60px; background-color: #842042;">
+  <p class="py-3">Copyright © Gochisou. All Rights Reserved.</p>
 </div>
