--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 mx-auto">
-      <div class="position-relative" style="background-image: url('/assets/meal_time_change.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 150px;">
+      <div class="back_image position-relative" style="background-image: image-url('/assets/meal_time_change.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 150px;">
         <h1 class="text-center text-white pt-5">人生のおいしいを共有しよう</h1>
 
       </div>
