--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -4,7 +4,7 @@
       <% if @user.image.attached? %>
         <%= image_tag @user.image, size: "100x100" %>
       <% else %>
-        <%= image_tag 'user_no_image', size: "80x80" %>
+        <%= image_tag 'user_no_image.jpg', size: "80x80" %>
       <% end %>
     </div>
     <div class="ml-3">
