--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,4 +1,4 @@
-<div class="back_image position-relative mt-3" style="background-image: image-url('/assets/table.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 500px;">
+<div class="back_image position-relative mt-3" style="background-size: cover; background-position: center; background-repeat: no-repeat; height: 500px;">
   <div style="position: absolute; top: 63%; left: 30%; transform: translate(-50%, -50%)">
     <h2>
       あなたが<span class="text-warning">「人生で一番美味しい」</span>と感じた一品を</br>
