--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,18 @@
  *= require_self
  */
 
-  .back_image {
+  .about_image {
     background-image: image-url('table.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 500px;
+  }
+  
+  .home_image {
+    background-image: image-url('meal_time_change.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 150px;
   }
