--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -5,7 +5,7 @@
         <% if @post.image.attached? %>
           <%= image_tag @post.image, size: "240x180" %>
         <% else %>
-          <%= image_tag 'no_image', size: "240x180" %>
+          <%= image_tag 'no_image.jpg', size: "240x180" %>
         <% end %>
       </div>
       <div>
@@ -20,7 +20,7 @@
         <% if @post.user.image.attached? %>
           <%= link_to (image_tag @post.user.image, size: "50x50"), admin_user_path(@post.user_id) %>
         <% else %>
-          <%= link_to (image_tag 'no_image', size: "50x50"), admin_user_path(@post.user_id) %>
+          <%= link_to (image_tag 'no_image.jpg', size: "50x50"), admin_user_path(@post.user_id) %>
         <% end %>
       </div>
       <p class="ml-3"><%= link_to @post.user.name, admin_user_path(@post.user_id) %></p>
