--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -36,7 +36,7 @@
             <% if post.image.attached? %>
               <%= link_to (image_tag post.image, size: "160x120"), admin_post_path(post) %>
             <% else %>
-              <%= link_to (image_tag 'no_image', size: "160x120"), admin_post_path(post) %>
+              <%= link_to (image_tag 'no_image.jpg', size: "160x120"), admin_post_path(post) %>
             <% end %>
             <br><%= link_to post.dish, admin_post_path(post) %>
           </div>
