--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -9,21 +9,21 @@
               <% if post.image.attached? %>
                 <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
               <% else %>
-                <%= link_to (image_tag 'no_image', size: "160x120"), post_path(post) %>
+                <%= link_to (image_tag 'no_image.jpg', size: "160x120"), post_path(post) %>
               <% end %></br>
               <%= link_to post.dish, post_path(post) %></br>
 
               <% if post.user.image.attached? %>
                 <%= link_to (image_tag post.user.image, size: "30x30"), user_path(post.user_id) %>
               <% else %>
-                <%= link_to (image_tag 'user_no_image', size: "30x30"), user_path(post.user_id) %>
+                <%= link_to (image_tag 'user_no_image.jpg', size: "30x30"), user_path(post.user_id) %>
               <% end %>
               <%= link_to post.user.name, user_path(post.user_id) %>
             <% else %>
               <% if post.image.attached? %>
                 <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
               <% else %>
-                <%= link_to (image_tag 'no_image', size: "160x120"), post_path(post) %>
+                <%= link_to (image_tag 'no_image.jpg', size: "160x120"), post_path(post) %>
               <% end %></br>
               <%= link_to post.dish, post_path(post) %></br>
             <% end %>
@@ -32,7 +32,7 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mt-3">
     <div><%= paginate @posts %></div>
   </div>
 </div>
