--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -34,7 +34,7 @@
             <% if post.image.attached? %>
               <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
             <% else %>
-              <%= link_to (image_tag 'no_image', size: "160x120"), post_path(post) %>
+              <%= link_to (image_tag 'no_image.jpg', size: "160x120"), post_path(post) %>
             <% end %>
             <br><%= link_to post.dish, post_path(post) %>
           </div>
@@ -42,7 +42,7 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mt-3">
     <div><%= paginate @posts %></div>
   </div>
 </div>
