--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="row mt-3">
-    <div class="col-10">
+    <div class="col-12">
       <h5>投稿一覧</h5>
       <div class ="d-flex flex-wrap">
         <% @posts.each do |post| %>
@@ -28,7 +28,7 @@
             <% if post.image.attached? %>
               <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
             <% else %>
-              <%= link_to (image_tag 'no_image', size: "160x120"), post_path(post) %>
+              <%= link_to (image_tag 'no_image.jpg', size: "160x120"), post_path(post) %>
             <% end %>
             <br><%= link_to post.dish, post_path(post) %>
           </div>
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mt-3">
     <div><%= paginate @posts %></div>
   </div>
 </div>
