--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -23,7 +23,7 @@
           <% if @post.user.image.attached? %>
             <%= link_to (image_tag @post.user.image, size: "50x50"), user_path(@post.user_id) %>
           <% else %>
-            <%= link_to (image_tag 'no_image.jpg', size: "50x50"), user_path(@post.user_id) %>
+            <%= link_to (image_tag 'user_no_image.jpg', size: "50x50"), user_path(@post.user_id) %>
           <% end %>
         </div>
         <p class="ml-3"><%= link_to @post.user.name, user_path(@post.user_id) %></p>
