--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -8,18 +8,18 @@
     </div>
   </div>
   <div class="row">
-    <div>
+    <div class="col-12">
       <h5 class="mt-1">新規投稿</h5>
       <div class="d-flex flex-wrap">
         <% @posts.each do |post| %>
-          <div class="mx-2 mb-3">
+          <div class="col-2 mr-1 mb-1">
             <% if post.image.attached? %>
               <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
             <% else %>
               <%= link_to (image_tag 'no_image.jpg', size: "160x120"), post_path(post) %>
             <% end %></br>
             <%= link_to post.dish, post_path(post), class: "text-dark text-center" %></br>
-            <%= post.impression.truncate(20) %>
+            <span class="text-secondary"><%= post.impression.truncate(20) %></span>
           </div>
         <% end %>
       </div>
