--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -4,7 +4,7 @@
       <h3 class="text-center">みんなが選ぶ一品</h3>
       <div class="d-flex flex-wrap mt-3">
         <% @posts.each do |post| %>
-          <div class="mr-3 mt-3">
+          <div class="col-2 mr-1 mb-2">
             <% if post.user.is_active == true %>
               <% if post.image.attached? %>
                 <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
