--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -24,7 +24,7 @@
       <h5>投稿一覧</h5>
       <div class ="d-flex flex-wrap">
         <% @posts.each do |post| %>
-          <div class="mr-3">
+          <div class="col-2 mr-1">
             <% if post.image.attached? %>
               <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
             <% else %>
