--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -26,7 +26,7 @@
   </div>
 
   <div class="row mt-3">
-    <div>
+    <div class="col-12">
       <h5 class="ml-3">投稿一覧</h5>
       <div class ="d-flex flex-wrap">
         <% @posts.each do |post| %>
