--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -9,7 +9,7 @@
       <% if @user.image.attached? %>
         <%= image_tag @user.image, size: "100x100" %>
       <% else %>
-        <%= image_tag 'user_no_image', size: "80x80" %>
+        <%= image_tag 'user_no_image.jpg', size: "80x80" %>
       <% end %>
       <% if @user.is_active == true %>
         <%= link_to "退会させる", admin_user_path(@user), method: :patch, data: { confirm: '本当に退会させますか？' }, class: "btn btn-sm btn-danger mt-2" %>
