--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -26,7 +26,7 @@
             <%= link_to (image_tag 'user_no_image.jpg', size: "50x50"), user_path(@post.user_id) %>
           <% end %>
         </div>
-        <p class="ml-3"><%= link_to @post.user.name, user_path(@post.user_id) %></p>
+        <p class="ml-3"><%= link_to @post.user.name, user_path(@post.user_id), class: "text-dark" %></p>
       </div>
     </div>
   <% end %>
