--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -36,7 +36,7 @@
             <% else %>
               <%= link_to (image_tag 'no_image.jpg', size: "160x120"), post_path(post) %>
             <% end %>
-            <br><%= link_to post.dish, post_path(post) %>
+            <br><%= link_to post.dish, post_path(post), class: "text-dark" %>
           </div>
         <% end %>
       </div>
@@ -46,9 +46,3 @@
     <div><%= paginate @posts %></div>
   </div>
 </div>
-
-<!--全て数表示-->
-<!--投稿-->
-<!--フォロワー(link)-->
-<!--フォロー(link)-->
-<!--食べたい(link)-->
