--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -11,7 +11,7 @@
       <% else %>
         <%= image_tag 'user_no_image.jpg', size: "80x80" %>
       <% end %>
-      <% if @user.is_active == true %>
+      <% if @user.is_active == true &&! @user.guest_user? %>
         <%= link_to "退会させる", admin_user_path(@user), method: :patch, data: { confirm: '本当に退会させますか？' }, class: "btn btn-sm btn-danger mt-2" %>
       <% end %>
     </div>
