--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -27,7 +27,7 @@
           <%= f.text_field :name, style: "width:50%" %>
         </div>
         <div class="mt-2">
-          <%= f.label :introduction, "食べた感想" %></br>
+          <%= f.label :introduction, "自己紹介" %></br>
           <%= f.text_area :introduction, style: "width:100%", placeholder: '好きな食べ物：　　味の好み：' %>
         </div>
         <div class="mt-2">
