--- a/app/views/public/comments/_counter.html.erb
+++ b/app/views/public/comments/_counter.html.erb
@@ -1,3 +1,3 @@
 
-<span><%= post.comments.count %></span><br>
+<span id="comment_count"><%= post.comments.count %></span><br>
 <span class="text-secondary">comment</span>
