--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -50,10 +50,10 @@
     </div>
   </div>
   <!--コメント関連-->
-  <div class="row mt-3">
+  <div id="comment-form", class="row mt-3">
     <%= render 'public/comments/form', {post: @post, comment: Comment.new} %>
   </div>
-  <div class="row mt-3">
+  <div id="comments", class="row mt-3">
     <%= render 'public/comments/index', post: @post %>
   </div>
 </div>
