--- a/app/views/public/posts/_form.html.erb
+++ b/app/views/public/posts/_form.html.erb
@@ -33,7 +33,7 @@
       <%= f.text_field :address, style: "width:100%" %>
     </div>
     <div class="mb-3">
-      <%= f.submit, class: 'btn btn-light mt-3' %>
+      <%= f.submit class: 'btn btn-light mt-3' %>
     </div>
   <% end %>
 </div>
