--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -7,9 +7,10 @@
             <th style="width: 5%">ID</th>
             <th style="width: 5%"></th>
             <th style="width: 20%">料理</th>
-            <th style="width: 50%">感想</th>
+            <th style="width: 45%">感想</th>
             <th style="width: 5%"></th>
             <th style="width: 15%">投稿者</th>
+            <th style="width: 5%">コメント</th>
           </tr>
         </thead>
         <% @posts.each do |post| %>
@@ -33,6 +34,7 @@
                 <% end %>
               </td>
               <td><%= link_to post.user.name, admin_user_path(post.user_id) %></td>
+              <td><%= render 'public/comments/counter', post: post %></td>
             </tr>
           </tbody>
         <% end %>
