--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -32,7 +32,7 @@
       <h5 class="ml-3"><%= @user.name %> の投稿一覧</h5>
       <div class ="d-flex flex-wrap">
         <% @posts.each do |post| %>
-          <div class="mr-3">
+          <div class="col-2 mr-1">
             <% if post.image.attached? %>
               <%= link_to (image_tag post.image, size: "160x120"), admin_post_path(post) %>
             <% else %>
