--- a/app/views/public/comments/_index.html.erb
+++ b/app/views/public/comments/_index.html.erb
@@ -18,7 +18,7 @@
       <div class="col-2">
         <% if comment.user == current_user %>
           <%= link_to '削除する', post_comment_path(post,comment), method: :delete, class: "btn btn-sm btn-outline-secondary", remote: true %>
-        <% elsif authenticate_admin! %>
+        <% elsif admin_signed_in? %>
           <%= link_to '削除する', admin_post_comment_path(post,comment), method: :delete, class: "btn btn-sm btn-outline-secondary", remote: true %>
         <% end %>
       </div>
