--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="row mt-3">
-    <div class="d-flex align-items-end">
+    <div class="d-flex align-items-end text-center">
       <div>
         <% if @post.user.image.attached? %>
           <%= link_to (image_tag @post.user.image, size: "50x50"), admin_user_path(@post.user_id) %>
@@ -24,6 +24,10 @@
         <% end %>
       </div>
       <p class="ml-3"><%= link_to @post.user.name, admin_user_path(@post.user_id) %></p>
+      <div class="ml-4">
+        <%= render 'public/comments/counter', post: @post %>
+        <br><span class="text-secondary">comment</span>
+      </div>
     </div>
   </div>
   <div class="row mt-3">
