--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -10,7 +10,7 @@
             <th style="width: 45%">感想</th>
             <th style="width: 5%"></th>
             <th style="width: 15%">投稿者</th>
-            <th style="width: 5%">コメント</th>
+            <th style="width: 5%"><i class="fa-regular fa-comment-dots"></i></th>
           </tr>
         </thead>
         <% @posts.each do |post| %>
