--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -7,10 +7,11 @@
             <th style="width: 5%">ID</th>
             <th style="width: 5%"></th>
             <th style="width: 20%">料理</th>
-            <th style="width: 45%">感想</th>
+            <th style="width: 40%">感想</th>
             <th style="width: 5%"></th>
             <th style="width: 15%">投稿者</th>
             <th style="width: 5%"><i class="fa-regular fa-comment-dots"></i></th>
+            <th style="width: 5%"><i class="fa-solid fa-heart"></i></th>
           </tr>
         </thead>
         <% @posts.each do |post| %>
@@ -35,6 +36,7 @@
               </td>
               <td><%= link_to post.user.name, admin_user_path(post.user_id) %></td>
               <td><%= render 'public/comments/counter', post: post %></td>
+              <td><%= post.favorites.count %></td>
             </tr>
           </tbody>
         <% end %>
