--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -28,6 +28,10 @@
         <%= render 'public/comments/counter', post: @post %>
         <br><span class="text-secondary">comment</span>
       </div>
+      <div class="ml-3">
+        <%= @post.favorites.count %>
+        <br><span class="text-secondary">食べたい</span>
+      </div>
     </div>
   </div>
   <div class="row mt-3">
