--- a/app/views/public/comments/_form.html.erb
+++ b/app/views/public/comments/_form.html.erb
@@ -1,6 +1,8 @@
-<div class="col-8 form-label text-right">
-  <%= form_with model: [post, comment], local: false do |f| %>
-    <%= f.text_area :comment, class: "form-control", style: "width:100%", rows: "3", placeholder: "コメントを入力" %>
-    <%= f.submit "送信", class: 'btn btn-light mt-2' %>
-  <% end %>
-</div>
+<% if post.user.is_active == true %>
+  <div class="col-8 form-label text-right">
+    <%= form_with model: [post, comment], local: false do |f| %>
+      <%= f.text_area :comment, class: "form-control", style: "width:100%", rows: "3", placeholder: "コメントを入力" %>
+      <%= f.submit "送信", class: 'btn btn-light mt-2' %>
+    <% end %>
+  </div>
+<% end %>
