--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -46,7 +46,7 @@
     <div class="col-3 ml-auto">
       <% if @post.user == current_user %>
         <%= link_to "編集する", edit_post_path(@post), class: "btn btn-light" %>
-        <%= link_to '削除する', @post, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-danger ml-2" %>
+        <%= link_to '削除する', @post, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-outline-danger ml-2" %>
       <% end %>
     </div>
   </div>
