--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -24,7 +24,7 @@
         <% unless @user.guest_user? %>
           <div class="ml-3">
             <%= link_to "編集する", edit_user_path(@user), class: "btn btn-light btn-sm" %>
-            <%= link_to '退会する', @user, method: :delete, data: { confirm: "退会すると全ての情報が削除されます。\n 本当に退会しますか？" }, class: "btn btn-sm btn-danger ml-2" %>
+            <%= link_to '退会する', @user, method: :delete, data: { confirm: "退会すると全ての情報が削除されます。\n 本当に退会しますか？" }, class: "btn btn-sm btn-outline-danger ml-2" %>
           </div>
         <% end %>
       </div>
@@ -33,7 +33,7 @@
 
   <div class="row mt-3">
     <div class="col-12">
-      <h5 class="ml-3">投稿一覧</h5>
+      <h5>投稿一覧</h5>
       <div class ="d-flex flex-wrap">
         <% @posts.each do |post| %>
           <div class="col-2 mr-1 mb-1">
