--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,16 +1,22 @@
 <div class="container mt-3">
   <div class="row">
-    <div class="col-1">
+    <div>
       <% if @user.image.attached? %>
         <%= image_tag @user.image, size: "100x100" %>
       <% else %>
         <%= image_tag 'user_no_image.jpg', size: "80x80" %>
       <% end %>
     </div>
-    <div class="col-6 ml-3">
-      <div class="d-flex align-items-end">
-        <span class="mr-2 mb-1">name: </span>
-        <h1><%= @user.name %></h1>
+    <div class="ml-3">
+      <div class="d-flex">
+        <div class="d-flex align-items-end">
+          <span class="mr-2 mb-1">name: </span>
+          <h1><%= @user.name %></h1>
+        </div>
+        <div class="ml-5 text-center">
+          <%= @user.posts.count %>
+          <br><span class="text-secondary">post</span>
+        </div>
       </div>
       <div class="d-flex align-items-end">
         <span class="mr-2">introduction: </span>
@@ -21,7 +27,7 @@
 
   <div class="row mt-3">
     <div class="col-12">
-      <h5>投稿一覧</h5>
+      <h5><%= @user.name %> の投稿一覧</h5>
       <div class ="d-flex flex-wrap">
         <% @posts.each do |post| %>
           <div class="col-2 mr-1">
