--- a/app/views/public/comments/_index.html.erb
+++ b/app/views/public/comments/_index.html.erb
@@ -8,7 +8,7 @@
             <% if comment.user.image.attached? %>
               <%= image_tag comment.user.image, size: "45x45" %>
             <% else %>
-              <%= image_tag 'user_no_image', size: "45x45" %>
+              <%= image_tag 'user_no_image.jpg', size: "45x45" %>
             <% end %>
           <% end %>
         </div>
