add show comment&favorite

--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -50,6 +50,10 @@
             <% end %>
             <br><%= link_to post.dish, post_path(post), class: "text-dark" %>
             <br><span class="text-danger">♥<%= post.favorites.count %></span>
+            <span class="ml-1">
+              <i class="fa-regular fa-comment-dots"></i>
+              <%= render 'public/comments/counter', post: post %>
+            </span>
           </div>
         <% end %>
       </div>
