--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -38,7 +38,12 @@
             <% else %>
               <%= link_to (image_tag 'no_image.jpg', size: "160x120"), admin_post_path(post) %>
             <% end %>
-            <br><%= link_to post.dish, admin_post_path(post) %>
+            <br><%= link_to post.dish, admin_post_path(post), class: "text-dark" %>
+            <br><span class="text-danger">♥<%= post.favorites.count %></span>
+            <span class="ml-1">
+              <i class="fa-regular fa-comment-dots"></i>
+              <%= render 'public/comments/counter', post: post %>
+            </span>
           </div>
         <% end %>
       </div>
