--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -16,9 +16,19 @@
       <% end %>
     </div>
     <div class="col-8">
-      <div class="d-flex align-items-end">
-        <span class="mr-2 mb-1">name: </span>
-        <h1><%= @user.name %></h1>
+      <div class="d-flex">
+        <div class="d-flex align-items-end">
+          <span class="mr-2 mb-1">name: </span>
+          <h1><%= @user.name %></h1>
+        </div>
+        <div class="ml-5 text-center">
+          <%= @user.posts.count %>
+          <br><span class="text-secondary">post</span>
+        </div>
+        <div class="ml-4 text-center">
+          <%= @user.followers.count %>
+          <br><span class="text-secondary">follower</span>
+        </div>
       </div>
       <div class="d-flex align-items-end">
         <span class="mr-2">introduction: </span>
