--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,36 +1,7 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col-12">
-      <table class= "table table-borderless mt-1">
-        <thead class="thead-light">
-          <tr>
-            <th style="width: 5%">ID</th>
-            <th style="width: 5%"></th>
-            <th style="width: 20%">ユーザーネーム</th>
-            <th style="width: 60%">自己紹介</th>
-            <th style="width: 5%">post</th>
-            <th style="width: 5%">follower</th>
-          </tr>
-        </thead>
-        <% @users.each do |user| %>
-          <tbody>
-            <tr>
-              <td><%= user.id %></td>
-              <td>
-                <% if user.image.attached? %>
-                  <%= image_tag user.image, size: "40x30" %>
-                <% else %>
-                  <%= image_tag 'user_no_image.jpg', size: "40x30" %>
-                <% end %>
-              </td>
-              <td><%= link_to user.name, admin_user_path(user) %></td>
-              <td><%= user.introduction.truncate(100) %></td>
-              <td class="text-center"><%= user.posts.count %></td>
-              <td class="text-center"><%= user.followers.count %></td>
-            </tr>
-          </tbody>
-        <% end %>
-      </table>
+      <%= render 'admin/users/index', users: @users %>
     </div>
   </div>
   <div class="row justify-content-center">
