--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -2,34 +2,7 @@
   <div class="row">
     <div class="col-12">
       <h3 class="text-center">みんなが選ぶ一品</h3>
-      <div class="d-flex flex-wrap mt-3">
-        <% @posts.each do |post| %>
-          <div class="col-2 mr-1 mb-2">
-            <% if post.user.is_active == true %>
-              <% if post.image.attached? %>
-                <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
-              <% else %>
-                <%= link_to (image_tag 'no_image.jpg', size: "160x120"), post_path(post) %>
-              <% end %></br>
-              <%= link_to post.dish, post_path(post), class: "text-dark" %></br>
-
-              <% if post.user.image.attached? %>
-                <%= link_to (image_tag post.user.image, size: "30x30"), user_path(post.user_id) %>
-              <% else %>
-                <%= link_to (image_tag 'user_no_image.jpg', size: "30x30"), user_path(post.user_id) %>
-              <% end %>
-              <%= link_to post.user.name, user_path(post.user_id), class: "text-dark" %>
-            <% else %>
-              <% if post.image.attached? %>
-                <%= link_to (image_tag post.image, size: "160x120"), post_path(post) %>
-              <% else %>
-                <%= link_to (image_tag 'no_image.jpg', size: "160x120"), post_path(post) %>
-              <% end %></br>
-              <%= link_to post.dish, post_path(post), class: "text-dark" %></br>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
+      <%= render "public/posts/index", posts: @posts %>
     </div>
   </div>
   <div class="row justify-content-center mt-3">
