--- a/app/views/public/genres/show.html.erb
+++ b/app/views/public/genres/show.html.erb
@@ -33,4 +33,7 @@
       </div>
     </div>
   </div>
+  <div class="row justify-content-center mt-3">
+    <div><%= paginate @posts %></div>
+  </div>
 </div>
